--- a/categories.html
+++ b/categories.html
@@ -22,15 +22,16 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav w-100 justify-content-between">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Inicio</a>
+            <a class="nav-link active" href="../../index.html">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="categories.html">Categorías</a>
+            <a class="nav-link" href="../../categories.html">Categorías</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="sell.html">Vender</a>
+            <a class="nav-link" href="../../sell.html">Vender</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="./index.html">Usuario</a>
           </li>
         </ul>
       </div>
