--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="./components/Login/index.html">Usuario</a>
           </li>
         </ul>
       </div>
@@ -88,6 +89,7 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/index.js"></script>
   <script src="js/init.js"></script>
+  <script src="js/validarUsuario.js"></script>
 </body>
 
 </html>
