--- a/products.html
+++ b/products.html
@@ -34,7 +34,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav w-100 justify-content-between">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Inicio</a>
+              <a class="nav-link active" href="index.html">Inicio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="categories.html">Categorías</a>
@@ -42,7 +42,11 @@
             <li class="nav-item">
               <a class="nav-link" href="sell.html">Vender</a>
             </li>
-            <li class="nav-item"></li>
+            <li class="nav-item">
+              <a class="nav-link" href="./components/Login/index.html"
+                >Usuario</a
+              >
+            </li>
           </ul>
         </div>
       </div>
