Cambios en navbar, footer, y agregue funcionalidad de cerrar sesion
1) Ahora el user puede cerrar sesion
2) Ahora en el navbar se ve el email del user.
3) Todo el codigo repetido de navbar y footer se paso a un unico archivo javascript

--- a/products.html
+++ b/products.html
@@ -18,39 +18,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1">
-      <div class="container">
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav w-100 justify-content-between">
-            <li class="nav-item">
-              <a class="nav-link active" href="index.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="categories.html">Categorías</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="sell.html">Vender</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./components/Login/index.html"
-                >Usuario</a
-              >
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1"></nav>
     <main class="pb-5 container">
       <div class="container">
         <h1 class="text-center">Productos</h1>
@@ -64,19 +32,7 @@
         </div>
       </div>
     </main>
-    <footer class="text-muted">
-      <div class="container">
-        <p class="float-end">
-          <a href="#">Volver arriba</a>
-        </p>
-        <p>
-          Este sitio forma parte de
-          <a href="https://jovenesaprogramar.edu.uy/" target="_blank"
-            >Jovenes a Programar</a
-          >
-        </p>
-      </div>
-    </footer>
+    <footer class="text-muted"></footer>
     <div id="spinner-wrapper">
       <div class="lds-ring">
         <div></div>
@@ -88,6 +44,9 @@
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/init.js"></script>
     <script src="js/products.js"></script>
+    <script src="js/validarUsuario.js"></script>
+    <script src="./navbar.js"></script>
+    <script src="./footer.js"></script>
   </body>
 </html>
 
