--- a/sell.html
+++ b/sell.html
@@ -12,30 +12,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1">
-    <div class="container">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav w-100 justify-content-between">
-          <li class="nav-item">
-            <a class="nav-link active" href="../../index.html">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../../categories.html">Categorías</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../../sell.html">Vender</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./index.html">Usuario</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1"></nav>
   <div class="container">
     <div class="text-center p-4">
       <h2>Vender</h2>
@@ -168,14 +145,7 @@
       </div>
     </div>
   </div>
-  <footer class="text-muted">
-    <div class="container">
-      <p class="float-end">
-        <a href="#">Volver arriba</a>
-      </p>
-      <p>Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a Programar</a></p>
-    </div>
-  </footer>
+  <footer class="text-muted"></footer>
 
   <div class="alert alert-primary-dismissible fade" id="alertResult" role="alert">
     <span id="resultSpan"></span>
@@ -226,6 +196,9 @@
   <script src="js/dropzone.js"></script>
   <script src="js/init.js"></script>
   <script src="js/sell.js"></script>
+  <script src="js/validarUsuario.js"></script>
+  <script src="./navbar.js"></script>
+  <script src="./footer.js"></script>
 </body>
 
 </html>
