--- a/product-info.html
+++ b/product-info.html
@@ -11,6 +11,7 @@
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
   <link rel="stylesheet" href="css/product-info.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -32,9 +33,34 @@
       <form>
         <input type="text" name="comentarios" id="btnComent" placeholder="Ingrese aqui su comentario">
         <button id="botonCmt">Enviar</button>
+        <div>
+          <label for="">Puntua:</label>
+          <select name="" id="estrellas">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+          </select>
+        </div>
+        <!-- <div class="cajaEstrellas">
+          <div class="rating">
+              <input onclick="alert('ayuda')" value="5" name="rating" id="estrella" type="radio">
+              <label for="estrella5" ></label>
+              <input value="4" name="rating" id="estrella" type="radio">
+              <label for="estrella4"></label>
+              <input value="3" name="rating" id="estrella" type="radio">
+              <label for="estrella3"></label>
+              <input value="2" name="rating" id="estrella" type="radio">
+              <label for="estrella2"></label>
+              <input value="1" name="rating" id="estrella" type="radio">
+              <label for="estrella1"></label>
+          </div>          
+      </div> -->
       </form>
     </div>
   </main>
+  
   <footer class="text-muted"></footer>
   <div id="spinner-wrapper">
     <div class="lds-ring">
