Agregado de css

--- a/product-info.html
+++ b/product-info.html
@@ -31,17 +31,18 @@
 
       </div>
       <form>
+        <div class="caja-input">
         <input type="text" name="comentarios" id="btnComent" placeholder="Ingrese aqui su comentario">
         <button id="botonCmt">Enviar</button>
-        <div>
-          <label for="">Puntua:</label>
-          <select name="" id="estrellas">
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-          </select>
+      </div>
+        <div class="caja-puntua">
+          <label for="estrellas">Puntua:</label>
+          <select name="puntuacion" id="estrellas">
+            <option value="1"> <span> &#9733; </option>
+            <option value="2"> &#9733;  &#9733; </option>
+            <option value="3"> &#9733;  &#9733;  &#9733; </option>
+            <option value="4"> &#9733;  &#9733;  &#9733;  &#9733; </option>
+            <option value="5"> &#9733; &#9733;  &#9733;  &#9733;  &#9733;</option>          </select>
         </div>
         <!-- <div class="cajaEstrellas">
           <div class="rating">
