Punto numero 1 y punto numero 2 hechos

--- a/my-profile.html
+++ b/my-profile.html
@@ -24,6 +24,8 @@
       }
     }
   </style>
+   <!-- font awesome -->
+   <script src="https://kit.fontawesome.com/2919f68f3c.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
