--- a/cart.html
+++ b/cart.html
@@ -14,6 +14,8 @@
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/font-awesome.min.css" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet" />
+     <!-- font awesome -->
+     <script src="https://kit.fontawesome.com/2919f68f3c.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
