--- a/categories.html
+++ b/categories.html
@@ -10,6 +10,8 @@
   <link href="css/font-awesome.min.css" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
+   <!-- font awesome -->
+   <script src="https://kit.fontawesome.com/2919f68f3c.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
