--- a/nosotros.html
+++ b/nosotros.html
@@ -6,6 +6,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/nosotros-style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+     <!-- font awesome -->
+     <script src="https://kit.fontawesome.com/2919f68f3c.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="conteiner">
