--- a/sell.html
+++ b/sell.html
@@ -9,6 +9,8 @@
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/dropzone.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
+   <!-- font awesome -->
+   <script src="https://kit.fontawesome.com/2919f68f3c.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
