--- a/product-info.html
+++ b/product-info.html
@@ -29,7 +29,7 @@
     <main>
       <div class="ful-img" id="fulImgBox">
         <img src="img/car1.jpg" id="fulImg" />
-        <span onclick="closeImg()">X</span>
+        <span id="closeSpan" onclick="closeImg()">X</span>
       </div>
       <div class="container">
         <div id="prueba">
