creacion de carrito compras

--- a/cart.html
+++ b/cart.html
@@ -14,6 +14,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/font-awesome.min.css" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/css/carrito-compras.css">
      <!-- font awesome -->
      <script src="https://kit.fontawesome.com/2919f68f3c.js" crossorigin="anonymous"></script>
   </head>
@@ -22,9 +23,19 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1"></nav>
     <main>
       <div class="container">
-        <div class="alert alert-danger text-center" role="alert">
-          <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
-        </div>
+          <h1 class="h1-compras">Carrito de Compras</h1>
+          <h4>Articulos a Comprar</h4>
+      </div>
+      <div class="caracteristicas">
+        <p>Nombre</p>
+        <p>Costo</p>
+        <p>Cantidad</p>
+        <p>Subtotal</p>
+      </div>
+      <div class="div-hr">
+        <hr>
+      </div>
+      <div id="producto-info">
       </div>
     </main>
     <footer class="text-muted"></footer>
