creacion de envio

--- a/cart.html
+++ b/cart.html
@@ -37,6 +37,30 @@
       </div>
       <div id="producto-info">
       </div>
+      <div class="div-hr-2">
+        <hr>
+      </div>
+      <div class="container">
+        <h4>Tipo de Envío</h4>
+        <div class="botones-radio">
+        <p><input type="radio" id="premium" name="envio"> <label for="premium"> Premium 2 a 5 días (15%)</label></p>
+        <p><input type="radio" id="express" name="envio"> <label for="express"> Express 5 a 8 días (7%)</label></p>
+        <p><input type="radio" id="standar" name="envio"> <label for="standar"> Standar 12 a 15 días (5%)</label></p>
+        </div>
+        <h4>Direccion de envio</h4>
+        <div class="form-direccion">
+          <div class="direccion">
+            <label for="calle">Calle:</label>
+            <input type="text" id="calle" name="calle" required>
+        
+            <label for="numero">Número:</label>
+            <input type="text" id="numero" name="numero" required>
+                   
+            <label for="esquina">Esquina:</label>
+            <input type="text" id="esquina" name="esquina">
+          </div>
+        </div>
+        </div>
     </main>
     <footer class="text-muted"></footer>
     <div id="spinner-wrapper">
