--- a/cart.html
+++ b/cart.html
@@ -43,9 +43,11 @@
       <div class="container">
         <h4>Tipo de Envío</h4>
         <div class="botones-radio">
-        <p><input type="radio" id="premium" name="envio"> <label for="premium"> Premium 2 a 5 días (15%)</label></p>
-        <p><input type="radio" id="express" name="envio"> <label for="express"> Express 5 a 8 días (7%)</label></p>
-        <p><input type="radio" id="standar" name="envio"> <label for="standar"> Standar 12 a 15 días (5%)</label></p>
+          <input type="radio" id="premium" name="envio" value="1"> <label for="premium"> Premium 2 a 5 días (15%)</label>
+          <br>
+          <input type="radio" id="express" name="envio" value="2"> <label for="express"> Express 5 a 8 días (7%)</label>
+          <br>
+          <input type="radio" id="standar" name="envio" value="3"> <label for="standar"> Standar 12 a 15 días (5%)</label>
         </div>
         <h4>Direccion de envio</h4>
         <div class="form-direccion">
