Clase del 11.10 liveshare cambios

--- a/categories.html
+++ b/categories.html
@@ -55,10 +55,7 @@
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="list-group" id="cat-list-container">
-        </div>
-      </div>
+      <div id="cat-list-container"  class="row w-100 mb-4" ></div>
     </div>
   </main>
   <footer class="text-muted"></footer>
