--- a/product-info.html
+++ b/product-info.html
@@ -2,24 +2,14 @@
 <html lang="es">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <title>eMercado - Todo lo que busques está aquí</title>
-
-    <link
-      href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet"/>
     <link href="css/font-awesome.min.css" rel="stylesheet" />
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/product-info.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
      <!-- font awesome -->
      <script src="https://kit.fontawesome.com/2919f68f3c.js" crossorigin="anonymous"></script>
   </head>
@@ -31,10 +21,13 @@
         <img src="img/car1.jpg" id="fulImg" />
         <span id="closeSpan" onclick="closeImg()"><i class="fa-solid fa-circle-xmark"></i></span>
       </div>
+
       <div class="container">
+
         <div id="prueba">
           <div id="imagenProducto"></div>
         </div>
+        
         <div id="comments"></div>
         <form>
           <div class="caja-input">
