responsive login, modo oscuro index y carrito

--- a/categories.html
+++ b/categories.html
@@ -10,6 +10,8 @@
   <link href="css/font-awesome.min.css" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
+  <link href="css/navbar.css" rel="stylesheet" />
+  <link href="css/footer.css" rel="stylesheet" />
    <!-- font awesome -->
    <script src="https://kit.fontawesome.com/2919f68f3c.js" crossorigin="anonymous"></script>
 </head>
@@ -55,7 +57,7 @@
           </div>
         </div>
       </div>
-      <div id="cat-list-container"  class="row w-100 mb-4" ></div>
+      <div id="cat-list-container"  class="row g-4 w-100 mb-4" ></div>
     </div>
   </main>
   <footer class="text-muted"></footer>
