--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     ></script>
   </head>
 
-  <body>
+  <body class="dark_mode">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1"></nav>
-    <main class="dark_mode">
+    <main >
       <div class="jumbotron text-center"></div>
       <div class="album ">
         <div class="container">
