--- a/product-info.html
+++ b/product-info.html
@@ -10,6 +10,8 @@
     <link href="css/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/product-info.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <link href="css/navbar.css" rel="stylesheet" />
+    <link href="css/footer.css" rel="stylesheet" />
      <!-- font awesome -->
      <script src="https://kit.fontawesome.com/2919f68f3c.js" crossorigin="anonymous"></script>
   </head>
@@ -29,14 +31,17 @@
         </div>
           <div id="comments"></div>
         <form>
-          <div class="caja-input">
-            <input
-              type="text"
-              name="comentarios"
-              id="btnComent"
-              placeholder="Ingrese aqui su comentario"
-            />
-            <button id="botonCmt">Enviar</button>
+          <br>
+          <div class="buscador">
+            <div class="caja-input">
+              <input
+                type="text"
+                name="comentarios"
+                id="btnComent"
+                placeholder="Ingrese aqui su comentario"
+              />
+              <button id="botonCmt">Enviar</button>
+            </div>
           </div>
           <div class="caja-puntua">
             <label for="estrellas">Puntua:</label>
