--- a/my-profile.html
+++ b/my-profile.html
@@ -8,6 +8,8 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
+  <link href="css/navbar.css" rel="stylesheet" />
+  <link href="css/footer.css" rel="stylesheet" />
   <style>
     .bd-placeholder-img {
       font-size: 1.125rem;
