--- a/products.html
+++ b/products.html
@@ -15,6 +15,8 @@
     <link href="css/font-awesome.min.css" rel="stylesheet" />
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="./css/productos.css">
+    <link href="css/navbar.css" rel="stylesheet" />
+    <link href="css/footer.css" rel="stylesheet" />
     
      <!-- font awesome -->
      <script src="https://kit.fontawesome.com/2919f68f3c.js" crossorigin="anonymous"></script>
