--- a/product-info.html
+++ b/product-info.html
@@ -38,7 +38,7 @@
                 type="text"
                 name="comentarios"
                 id="btnComent"
-                placeholder="Ingrese aqui su comentario"
+                placeholder="Ingrese aquí su comentario"
               />
               <button id="botonCmt">Enviar</button>
             </div>
