modo oscuro icono mas bonito, en el carrito esta el icono de borrar

--- a/cart.html
+++ b/cart.html
@@ -46,6 +46,7 @@
                 <th class="dark_mode" id="tr_costo" scope="col">Costo</th>
                 <th class="dark_mode" id="tr_cantidad" scope="col">Cantidad</th>
                 <th class="dark_mode" id="tr_subtotal" scope="col">Subtotal</th>
+                <th class="dark_mode" id="tr_acciones" scope="col">Acciones</th>
               </tr>
             </thead>
             <tbody id="productos_del_carrito"></tbody>
